--- a/hello.html
+++ b/hello.html
@@ -4,6 +4,7 @@
         <title>Hello!</title> <!-- title name of the page    -->
     </head>
     <body>
+        <h1>Welcome to the website</h1>
         Hello,World!
     </body>
 </html>
