--- a/hello.html
+++ b/hello.html
@@ -2,9 +2,10 @@
 <html lang="en"> 
     <head>
         <title>Hello!</title> <!-- title name of the page    -->
+
     </head>
     <body>
-        <h1>Welcome to the website</h1>
+        <h1 style="color:blue;">Welcome to the website</h1>
         <h2>Hello!</h2>
         Hello,World!
     </body>
