--- a/Lab01_6588070.html
+++ b/Lab01_6588070.html
@@ -15,8 +15,43 @@
         <h5> nakarin.pho@student.mahidol.ac.th</h5>
         <h3>Educational Background</h3>
         <ul>
-            <l>High school</l>
+            <li>Junior&High school: Saraburiwitthayakhom
+                Major: Art-Math
+            </li>
         </ul>
+        <h3>language</h3>
+        <ul>
+            <li>English: good in listening and reading </li>
+            <li>Thai: Native speaker</li>
+        </ul>
+        <h3>Experience/Activities</h3>
+        <ul>
+            <li>
+                Mahidol Openhouse 16-17 September 2023
+            </li>
+            <li>
+
+            </li>
+        </ul>
+
+        <table>
+            <!-- thead is the header -->
+            <thead> 
+                <tr>
+                    <th>References</th>
+                </tr>
+            </thead>
+            <body>
+                <tr>
+                    <td>Andrew Ng</td>
+                    <td><a href="mailto:ang@cs.stanford.edu"></a></td>
+                </tr>
+                <tr>
+                    <td>Dr. Wudhichart Sawangphol</td>
+                    <td><a href="mailto:wudhichart.saw@mahidol.edu"></a></td>
+                </tr>
+            </body>
+        </table>
 
         <h2>Hello!</h2>
         Hello,World!
