--- a/Lab01_6588070.html
+++ b/Lab01_6588070.html
@@ -15,8 +15,8 @@
         <h5> nakarin.pho@student.mahidol.ac.th</h5>
         <h3>Educational Background</h3>
         <ul>
-            <li>Junior&High school: Saraburiwitthayakhom
-                Major: Art-Math
+            <li>Junior & High school: Saraburi witthayakhom
+               <br/><br/> Major: Art-Math
             </li>
         </ul>
         <h3>language</h3>
@@ -38,25 +38,23 @@
             <!-- thead is the header -->
             <thead> 
                 <tr>
-                    <th>References</th>
+                    <th colspan="2"><strong>References</strong></th>
                 </tr>
             </thead>
             <body>
                 <tr>
                     <td>Andrew Ng</td>
-                    <td><a href="mailto:ang@cs.stanford.edu"></a></td>
+                    <td><a href="mailto:ang@cs.stanford.edu">Andrew</a></td>
                 </tr>
                 <tr>
                     <td>Dr. Wudhichart Sawangphol</td>
-                    <td><a href="mailto:wudhichart.saw@mahidol.edu"></a></td>
+                    <td><a href="mailto:wudhichart.saw@mahidol.edu">Wudhichart</a></td>
                 </tr>
             </body>
         </table>
 
-        <h2>Hello!</h2>
-        Hello,World!
     </body>
 </html>
 
-
+<!-- mailto credit for https://www.w3schools.com/tags/tryit.asp?filename=tryhtml_link_mailto -->
 <!-- git branch - b create a new branch -->
