--- a/Lab01_6588070.html
+++ b/Lab01_6588070.html
@@ -16,7 +16,7 @@
         <h3>Educational Background</h3>
         <ul>
             <li>Junior & High school: Saraburi witthayakhom
-               <br/><br/> Major: Art-Math
+               <br/> Major: Art-Math<br/>
             </li>
         </ul>
         <h3>language</h3>
@@ -30,7 +30,7 @@
                 Mahidol Openhouse 16-17 September 2023
             </li>
             <li>
-
+                Google Developer club devfest bangkok 17 December 2023
             </li>
         </ul>
 
