--- a/Lab01_6588070.html
+++ b/Lab01_6588070.html
@@ -16,7 +16,7 @@
         <h3>Educational Background</h3>
         <ul>
             <li>Junior & High school: Saraburi witthayakhom
-               <br/> Major: Art-Math<br/>
+            <br/> Major: Art-Math<br/>
             </li>
         </ul>
         <h3>language</h3>
@@ -24,18 +24,30 @@
             <li>English: good in listening and reading </li>
             <li>Thai: Native speaker</li>
         </ul>
+        <h3>Technical skills</h3>
+        <ul>
+            <li>
+                Programming: Basic C, Java, SQL, python 
+            </li>
+            <li>
+                
+            </li>
+        </ul>
         <h3>Experience/Activities</h3>
         <ul>
             <li>
-                Mahidol Openhouse 16-17 September 2023
+                Mahidol Openhouse: 16-17 September 2023
             </li>
             <li>
-                Google Developer club devfest bangkok 17 December 2023
+                Google Developer club devfest: bangkok 17 December 2023
             </li>
         </ul>
 
+
+
         <table>
             <!-- thead is the header -->
+            <!-- colspan is merge cell with specify size -->
             <thead> 
                 <tr>
                     <th colspan="2"><strong>References</strong></th>
