--- a/Lab01_6588070.html
+++ b/Lab01_6588070.html
@@ -18,8 +18,9 @@
             <li>Junior & High school: Saraburi witthayakhom
             <br/> Major: Art-Math<br/>
             </li>
+            <li>Elementary school: Yuwa witthayakhom school</li>
         </ul>
-        <h3>language</h3>
+        <h3>Language</h3>
         <ul>
             <li>English: good in listening and reading </li>
             <li>Thai: Native speaker</li>
@@ -30,20 +31,21 @@
                 Programming: Basic C, Java, SQL, python 
             </li>
             <li>
-                
+                Microsoft office: Word, PowerPoint ,Outlook
+            </li>
+            <li>
+                Operating System: MacOS, Windows
             </li>
         </ul>
         <h3>Experience/Activities</h3>
         <ul>
             <li>
-                Mahidol Openhouse: 16-17 September 2023
+                Mahidol Openhouse 2023: 16-17 September 2023
             </li>
             <li>
                 Google Developer club devfest: bangkok 17 December 2023
             </li>
         </ul>
-
-
 
         <table>
             <!-- thead is the header -->
