--- a/Lab01_6588070.html
+++ b/Lab01_6588070.html
@@ -1,74 +1,83 @@
-<!DOCTYPE html> 
-<html lang="en"> 
-    <head>
-        <title>6588070 Nakarin Phoorahong</title> <!-- title name of the page    -->
-        <style>
-            table,tr,th,td{
-                border: 1px solid black;
-            }
-        </style>
-    </head>
-    <body>
+<!DOCTYPE html>
+<html lang="en">
 
-        <h1 style="color:black";>Nakarin Phoorahong</h1>
-        <h5> MU Dorminitory Mahidol Salaya 71370</h5>
-        <h5> nakarin.pho@student.mahidol.ac.th</h5>
-        <h3>Educational Background</h3>
-        <ul>
-            <li>Junior & High school: Saraburi witthayakhom
-            <br/> Major: Art-Math<br/>
-            </li>
-            <li>Elementary school: Yuwa witthayakhom school</li>
-        </ul>
-        <h3>Language</h3>
-        <ul>
-            <li>English: good in listening and reading </li>
-            <li>Thai: Native speaker</li>
-        </ul>
-        <h3>Technical skills</h3>
-        <ul>
-            <li>
-                Programming: Basic C, Java, SQL, python 
-            </li>
-            <li>
-                Microsoft office: Word, PowerPoint ,Outlook
-            </li>
-            <li>
-                Operating System: MacOS, Windows
-            </li>
-        </ul>
-        <h3>Experience/Activities</h3>
-        <ul>
-            <li>
-                Mahidol Openhouse 2023: 16-17 September 2023
-            </li>
-            <li>
-                Google Developer club devfest: bangkok 17 December 2023
-            </li>
-        </ul>
+<head>
+    <title>6588070 Nakarin Phoorahong</title> <!-- title name of the page    -->
+    <style>
+        table,
+        tr,
+        th,
+        td {
+            border: 1px solid black;
+        }
+    </style>
+</head>
 
-        <table>
-            <!-- thead is the header -->
-            <!-- colspan is merge cell with specify size -->
-            <thead> 
-                <tr>
-                    <th colspan="2"><strong>References</strong></th>
-                </tr>
-            </thead>
-            <body>
-                <tr>
-                    <td>Andrew Ng</td>
-                    <td><a href="mailto:ang@cs.stanford.edu">Andrew</a></td>
-                </tr>
-                <tr>
-                    <td>Dr. Wudhichart Sawangphol</td>
-                    <td><a href="mailto:wudhichart.saw@mahidol.edu">Wudhichart</a></td>
-                </tr>
-            </body>
-        </table>
+<body>
+    <iframe src="https://giphy.com/embed/JUXf0SoARGOPsQSqB2" width="480" height="480" frameBorder="0"
+        class="giphy-embed"></iframe>
+    <h1 style="color:black"> Nakarin Phoorahong </h1>
+    <h5> MU Dorminitory Mahidol Salaya 71370</h5>
+    <h5> nakarin.pho@student.mahidol.ac.th</h5>
+    <h3>Educational Background</h3>
+    <ul>
+        <li>Junior and High school: Saraburi witthayakhom
+            <br> Major: Art-Math<br>
+        </li>
+        <li>Elementary school: Yuwa witthayakhom school</li>
+    </ul>
+    <h3>Language</h3>
+    <ul>
+        <li>English: good in listening and reading</li>
+        <li>Thai: Native speaker</li>
+    </ul>
+    <h3>Technical skills</h3>
+    <ul>
+        <li>
+            Programming: Basic C, Java, SQL, python
+        </li>
+        <li>
+            Microsoft office: Word, PowerPoint ,Outlook
+        </li>
+        <li>
+            Operating System: MacOS, Windows
+        </li>
+    </ul>
+    <h3>Experience/Activities</h3>
+    <ul>
+        <li>
+            Mahidol Openhouse 2023: 16-17 September 2023
+        </li>
+        <li>
+            Google Developer club devfest: bangkok 17 December 2023
+        </li>
+    </ul>
+    <iframe src="https://giphy.com/embed/LoCqBc0JVF4ALQ4vRW" width="480" height="480" frameBorder="0"
+        class="giphy-embed"></iframe>
+    <table>
+        <!-- thead is the header -->
+        <!-- colspan is merge cell with specify size -->
+        <thead>
+            <tr>
+                <th colspan="2"><strong>References</strong></th>
+            </tr>
+        </thead>
 
-    </body>
+        <body>
+            <tr>
+                <td>Andrew Ng</td>
+                <td><a href="mailto:ang@cs.stanford.edu">Andrew</a></td>
+            </tr>
+            <tr>
+                <td>Dr. Wudhichart Sawangphol</td>
+                <td><a href="mailto:wudhichart.saw@mahidol.edu">Wudhichart</a></td>
+            </tr>
+        </body>
+    </table>
+
+</body>
+
 </html>
 
-<!-- mailto credit for https://www.w3schools.com/tags/tryit.asp?filename=tryhtml_link_mailto -->
 <!-- git branch - b create a new branch -->
+<!-- git checkout nameofbranchto get the branch that you created -->
