--- a/Lab01_6588070.html
+++ b/Lab01_6588070.html
@@ -14,16 +14,17 @@
 </head>
 
 <body>
-
     <h1 style="color:black"> Nakarin Phoorahong </h1>
-    <h5> MU Dorminitory Mahidol Salaya 71370</h5>
+    <h5> MU Dormitory Mahidol Salaya 71370</h5>
     <h5> nakarin.pho@student.mahidol.ac.th</h5>
     <h3>Educational Background</h3>
     <ul>
+        <li>Faculty of Information Technology, Mahidol University Thailand
+            <br> Bachelor of Science (Information Technology); August 2021 - present<br>
+        </li>
         <li>Junior and High school: Saraburi witthayakhom
             <br> Major: Art-Math<br>
         </li>
-        <li>Elementary school: Yuwa witthayakhom school</li>
     </ul>
     <h3>Language</h3>
     <ul>
@@ -48,7 +49,7 @@
             Mahidol Openhouse 2023: 16-17 September 2023
         </li>
         <li>
-            Google Developer club devfest: bangkok 17 December 2023
+            Google Developer club devfest bangkok: 17 December 2023
         </li>
     </ul>
     <table>
@@ -76,5 +77,7 @@
 
 </html>
 
+<!-- br is break line spacing -->
+<!-- td is table data and tr table row and th table head -->
 <!-- git branch - b create a new branch -->
 <!-- git checkout nameofbranchto get the branch that you created -->
