--- a/Lab01_6588070.html
+++ b/Lab01_6588070.html
@@ -19,11 +19,11 @@
     <h5> nakarin.pho@student.mahidol.ac.th</h5>
     <h3>Educational Background</h3>
     <ul>
-        <li>Faculty of Information Technology, Mahidol University Thailand
+        <li>Faculty of Information Technology, Mahidol University, Thailand
             <br> Bachelor of Science (Information Technology); August 2021 - present<br>
         </li>
         <li>Junior and High school: Saraburi witthayakhom
-            <br> Major: Art-Math<br>
+            <br> Major: Art-Math &nbsp; May 2019 - May 2021<br>
         </li>
     </ul>
     <h3>Language</h3>
@@ -80,4 +80,4 @@
 <!-- br is break line spacing -->
 <!-- td is table data and tr table row and th table head -->
 <!-- git branch - b create a new branch -->
-<!-- git checkout nameofbranchto get the branch that you created -->
+<!-- git checkout name of branchto get the branch that you created -->
