--- a/hello.html
+++ b/hello.html
@@ -14,6 +14,49 @@
 
         <h2>Hello!</h2>
         Hello,World!
+
+
+        <form>
+            <label for="fname">First name:</label>
+            <input type="text" id="fname" name="fname"><br><br>
+
+            <label for="tt">Right here:</label>
+            <!-- <input type="button" id="tt" name="ttt"></<br><br>
+            <button type="button" id="submit" name="submit"></button> -->
+            <input type="radio" name="tt" id="tt" value="ABC" checked>A<br>
+            <input type="radio" name="tt" id="tt" value="BDCD" >BDCD<br>
+
+
+            <label for="Student ID">Student ID: </label>
+            <input type="text" name="stid" id="stid"><br>
+            <label for="Section: ">Section</label>
+            <input type="radio" name="one" id="one" value="1">Sec 1
+            &nbsp;
+            <input type="radio" name="two" id="two" value="2">Sec 2
+            &nbsp;
+            <input type="radio" name="three" id="three" value="3">Sec 3
+            <br>
+            <label for="QQ">Are you happy ?</label>
+            <input type="radio" name="on" id="on" >No
+            <input type="radio" name="Ye" id="Ye" >Yes
+
+
+            <br>
+            <label for="qt">phone: </label>
+            <input type="tel" name="mobile" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}">
+             
+            <button type="submit">Submit</button>
+            <br>
+            <!-- <label for="qt">phone: </label>
+    <input type="tel" name="mobile" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}">
+    <button type="submit">Submit</button> -->
+        </form>
+        
+
+
+
+
+
     </body>
 </html>
 
