--- a/L2-6588070-contact.html
+++ b/L2-6588070-contact.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<header><h1>Nakarin's Website</h1></header>
+<header><h1>Nakarin's Website</h1>
+</header>
+<head> <link rel="stylesheet" href="L3-6588070-style.css"></head>
 <body>
 <nav>
     <ul> 
-        <li><a href="L2-6588070-cv.html">CV</a></li>   
-        <li><a href="L2-6588070-contact.html">Contact</a></li>
+        <a href="L2-6588070-cv.html" id="cv">CV</a></li>   
+        <a href="L2-6588070-contact.html" id="contact">Contact</a></li>
     </ul>
 </nav>
 <main>
-    <h1> Contact Us</h1>
-    <form>
-        <fieldset>
-            <legend>Your personal information</legend>
+    <h1 class="Con""> Contact Us</h1>
+    <form class="form">
+        <fieldset class="line">
+            <legend class="LL">Your personal information</legend>
             <label for="fname">Your First name:</label>
             <input type="text" id="fname" name="fname" required><br>
             <label for="lname">Your Last name:</label>
