--- a/L2-6588070-cv.html
+++ b/L2-6588070-cv.html
@@ -3,82 +3,91 @@
 <header><h1>Nakarin's Website</h1></header>
 <body>
 <nav>
-    <ul> 
-        <li><a href="L2-6588070-cv.html">CV</a></li>   
-        <li><a href="L2-6588070-contact.html">Contact</a></li>
-    </ul>
 
+    <a href="L2-6588070-cv.html" id="cv">CV</a> 
+        <a href="L2-6588070-contact.html" id="contact">Contact</a>
 </nav>
 <main>
 <head>
     <title>6588070 Nakarin Phoorahong</title> <!-- title name of the page    -->
-    <style>
+    <!-- <style>
         table,
         tr,
         th,
         td {
             border: 1px solid black;
-        }
+        } -->
     </style>
+    <link rel="stylesheet" href="L3-6588070-style.css">
 </head>
 
+    <h1 class="N"> Nakarin Phoorahong </h1>
+    <h5 class="ae"> MU Dormitory Mahidol Salaya 71370</h5>
+    <h5 class="ae"> nakarin.pho@student.mahidol.ac.th</h5>
+    <section class="education">
+        <h3 id="edu">Educational Background</h3>
+        <ul>
+            <li id="tx">Faculty of Information Technology, Mahidol University, Thailand
+                <br> Bachelor of Science (Information Technology); August 2021 - present<br>
+            </li>
+            <li id="tx">Junior and High school: Saraburi witthayakhom
+                <br> Major: Art-Math &nbsp; May 2019 - May 2021<br>
+            </li>
+        </ul>
+    </section>
 
-    <h1 style="color:black"> Nakarin Phoorahong </h1>
-    <h5> MU Dormitory Mahidol Salaya 71370</h5>
-    <h5> nakarin.pho@student.mahidol.ac.th</h5>
-    <h3>Educational Background</h3>
-    <ul>
-        <li>Faculty of Information Technology, Mahidol University, Thailand
-            <br> Bachelor of Science (Information Technology); August 2021 - present<br>
-        </li>
-        <li>Junior and High school: Saraburi witthayakhom
-            <br> Major: Art-Math &nbsp; May 2019 - May 2021<br>
-        </li>
-    </ul>
-    <h3>Language</h3>
-    <ul>
-        <li>English: good in listening and reading</li>
-        <li>Thai: Native speaker</li>
-    </ul>
-    <h3>Technical skills</h3>
-    <ul>
-        <li>
-            Programming: Basic C, Java, SQL, python
-        </li>
-        <li>
-            Microsoft office: Word, PowerPoint ,Outlook
-        </li>
-        <li>
-            Operating System: MacOS, Windows
-        </li>
-    </ul>
-    <h3>Experience/Activities</h3>
-    <ul>
-        <li>
-            Mahidol Openhouse 2023: 16-17 September 2023
-        </li>
-        <li>
-            Google Developer club devfest bangkok: 17 December 2023
-        </li>
-    </ul>
-    <table>
+    <section class="language">
+        <h3 id="lang"">Language</h3>
+        <ul>
+            <li id="tx">English: good in listening and reading</li>
+            <li id="tx">Thai: Native speaker</li>
+        </ul>
+    </section>
+    
+    <section id="skills">   
+        <h3 id="skill">Technical skills</h3>
+        <ul>
+            <li id="tx">
+                Programming: Basic C, Java, SQL, python
+            </li>
+            <li id="tx">
+                Microsoft office: Word, PowerPoint ,Outlook
+            </li>
+            <li id="tx">
+                Operating System: MacOS, Windows
+            </li>
+        </ul>
+    </section>
+
+    <section class="experience">
+        <h3 id="exp">Experience/Activities</h3>
+        <ul >
+            <li id="tx">
+                Mahidol Openhouse 2023: 16-17 September 2023
+            </li >
+            <li id="tx">
+                Google Developer club devfest bangkok: 17 December 2023
+            </li>
+        </ul>
+    </section>
+
+    <table class="tb">
         <!-- thead is the header -->
         <!-- colspan is merge cell with specify size -->
-        <thead>
+        <thead class="tb">
             <tr>
-                <th colspan="2"><strong>References</strong></th>
+                <th colspan="2" class="tb"><strong>References</strong></th>
             </tr>
         </thead>
-
-        <body>
+        <body class="tb">
             <tr>
-                <td>Andrew Ng</td>
-                <td><a href="mailto:ang@cs.stanford.edu">Andrew</a></td>
+                <td class="tb">Andrew Ng</td>
+                <td class="tb"><a href="mailto:ang@cs.stanford.edu">ang@cs.stanford.edu</a></td>
                 
             </tr>
             <tr>
-                <td>Dr. Wudhichart Sawangphol</td>
-                <td><a href="mailto:wudhichart.saw@mahidol.edu">Wudhichart</a></td>
+                <td class="tb">Dr. Wudhichart Sawangphol</td>
+                <td class="tb"><a href="mailto:wudhichart.saw@mahidol.edu">wudhichart.saw@mahidol.edu</a></td>
             </tr>
         </body>
     </table>
@@ -87,7 +96,7 @@
 </main>
 <br>
 <footer>
-    <h3>!The EnD!,&nbsp; goodbye Sigon</h3><br>
+    <h3>!The EnD!,&nbsp; Good night Sigon</h3><br>
     <iframe src="https://giphy.com/embed/oBdmZbbQebxvtxsT9P" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/primevideo-the-boys-homelander-antony-starr-oBdmZbbQebxvtxsT9P"></a></p>
 </footer>
 </body>
